# mathinterpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: core.h  handler.h  imain.h  interpreter.h  io.h  types.hpp
include/handlers/: error_handler.h  output_handler.h
include/mod/: objects.h
include/types/: iobject.h  matrix.hpp  number.hpp  rational.hpp  types.h  vector.hpp
src/: handler.cpp  interpreter.cpp  io.cpp
src/handlers/: error_handler.cpp  output_handler.cpp
src/mod/: objects.c
tests/: matrix_test.cpp  rational_test.cpp  vector_test.cpp
